SFUSA/force-app/main/default/objects/Single_Barrel_Trip_Limit_Setting__mdt/fields/Per_Day_Total__c.field-meta.xml
<CustomField>
        <fullName>Per_Day_Total__c</fullName>
        <label>Per Day Total</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>